--- a/.editorconfig
+++ b/.editorconfig
@@ -7,7 +7,7 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[{README.md,package.json,.travis.yml,*.sh,*.js}]
+[{README.md,package.json,.travis.yml,*.sh,*.js,*.case,*.template}]
 indent_style = space
 indent_size = 2
 
