--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -181,4 +181,4 @@ workflows:
       - "V8 --harmony: New or modified tests execution"
       - "XS: New or modified tests execution"
       - "engine262: New or modified tests execution"
-      # - "GraalJS: New or modified tests execution"
+      - "GraalJS: New or modified tests execution"
