--- a/src/identifier-names/default/arrow-fn-assignment-identifier.template
+++ b/src/identifier-names/default/arrow-fn-assignment-identifier.template
@@ -3,7 +3,7 @@
 
 /*---
 path: language/expressions/arrow-function/dstr/syntax-error-ident-ref-
-name: IdentiferReference in ObjectAssignmentPattern (Arrow Function) cannot be a ReservedWord
+name: IdentifierReference in ObjectAssignmentPattern (Arrow Function) cannot be a ReservedWord
 esid: prod-AssignmentPattern
 info: |
   AssignmentPattern:
