--- a/src/identifier-names/future-reserved-words/obj-assignment-identifier.template
+++ b/src/identifier-names/future-reserved-words/obj-assignment-identifier.template
@@ -3,7 +3,7 @@
 
 /*---
 path: language/expressions/assignment/dstr/syntax-error-ident-ref-
-name: IdentiferReference in ObjectAssignmentPattern cannot be a ReservedWord
+name: IdentifierReference in ObjectAssignmentPattern cannot be a ReservedWord
 esid: prod-AssignmentPattern
 info: |
   AssignmentPattern:
