--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
-**/* @tc39/test262-maintainers
-test/staging/* @tc39/test262-staging @tc39/test262-maintainers
+* @tc39/test262-maintainers
+/test/staging/ @tc39/test262-staging @tc39/test262-maintainers
