--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "test:diff:spidermonkey": "test262-harness -t 8 --hostType=jsshell --hostPath=spidermonkey $(npm run --silent diff)",
     "test:diff:javascriptcore": "test262-harness -t 8 --hostType=jsc --hostPath=javascriptcore $(npm run --silent diff)",
     "test:diff:xs": "test262-harness -t 8 --hostType=xs --hostPath=xs $(npm run --silent diff)"
+  },
+  "dependencies": {
+    "@tc39/ecma262-biblio": "^2.1.2458"
   }
 }
