--- a/src/function-forms/expr-named/async-func-expr-named-strict-error.template
+++ b/src/function-forms/expr-named/async-func-expr-named-strict-error.template
@@ -12,6 +12,7 @@ info: |
 
 features: [async-functions]
 flags: [async, onlyStrict]
+includes: [asyncHelpers.js]
 ---*/
 
 // increment callCount in case "body"
@@ -20,7 +21,7 @@ let ref = async function BindingIdentifier() {
   /*{ body }*/
 };
 
-(async () => {
+asyncTest(async () => {
   let catchCount = 0;
   try {
     await ref()
@@ -30,5 +31,5 @@ let ref = async function BindingIdentifier() {
   }
   assert.sameValue(catchCount, 1);
   assert.sameValue(callCount, 1);
-})().then($DONE, $DONE);
+});
 
