--- a/src/function-forms/expr-named/async-gen-func-expr-named-strict-error.template
+++ b/src/function-forms/expr-named/async-gen-func-expr-named-strict-error.template
@@ -10,6 +10,7 @@ info: |
 
 features: [async-iteration]
 flags: [async, onlyStrict]
+includes: [asyncHelpers.js]
 ---*/
 
 // increment callCount in case "body"
@@ -18,7 +19,7 @@ let ref = async function * BindingIdentifier() {
   /*{ body }*/
 };
 
-(async () => {
+asyncTest(async () => {
   let catchCount = 0;
   try {
     (await (await ref()).next()).value
@@ -28,5 +29,5 @@ let ref = async function * BindingIdentifier() {
   }
   assert.sameValue(catchCount, 1);
   assert.sameValue(callCount, 1);
-})().then($DONE, $DONE);
+});
 
