--- a/src/regexp-modifiers/flags-syntax-error/arithmetic-modifiers-literal-reversed.template
+++ b/src/regexp-modifiers/flags-syntax-error/arithmetic-modifiers-literal-reversed.template
@@ -15,4 +15,4 @@ negative:
 
 $DONOTEVALUATE();
 
-/(?/*{ modifiers }*/-/*{ add-modifiers }*/:a)//*{ global-modifiers }*/;
+/(?/*{ subpattern-remove-modifiers }*/-/*{ subpattern-add-modifiers }*/:a)//*{ global-modifiers }*/;
