CI: Setup SBT manually
One of the core developers of SBT has kindly created an action to replace
the missing SBT in newer Ubuntu images.
https://github.com/marketplace/actions/setup-sbt-installer

Closes: #4267

--- a/.github/workflows/esmeta-test262.yml
+++ b/.github/workflows/esmeta-test262.yml
@@ -14,6 +14,8 @@ jobs:
         with:
           distribution: temurin
           java-version: 17
+      - name: Setup SBT
+        uses: sbt/setup-sbt@v1
       - name: Add to PATH
         shell: bash
         run: |
