--- a/tools/regexp-generator/package.json
+++ b/tools/regexp-generator/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "prebuild": "mkdirp ../../test/built-ins/RegExp/CharacterClassEscapes",
     "build": "node index.js"
   },
   "author": "",
@@ -14,5 +15,8 @@
     "jsesc": "^2.5.1",
     "regexpu-core": "^4.2.0",
     "slugify": "^1.3.0"
+  },
+  "devDependencies": {
+    "mkdirp": "^3.0.1"
   }
 }
