--- a/tools/regexp-generator/package.json
+++ b/tools/regexp-generator/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rimraf ../../test/built-ins/RegExp/CharacterClassEscapes",
     "prebuild": "mkdirp ../../test/built-ins/RegExp/CharacterClassEscapes",
     "build": "node index.js"
   },
@@ -17,6 +18,7 @@
     "slugify": "^1.3.0"
   },
   "devDependencies": {
-    "mkdirp": "^3.0.1"
+    "mkdirp": "^3.0.1",
+    "rimraf": "^6.0.1"
   }
 }
