--- a/tools/regexp-generator/package.json
+++ b/tools/regexp-generator/package.json
@@ -2,23 +2,21 @@
   "name": "test262-regexp-class-escapes",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf ../../test/built-ins/RegExp/CharacterClassEscapes",
     "prebuild": "mkdirp ../../test/built-ins/RegExp/CharacterClassEscapes",
-    "build": "node index.js"
+    "build": "node index.mjs"
   },
   "author": "",
   "license": "MIT",
-  "dependencies": {
-    "filenamify": "^2.1.0",
-    "jsesc": "^2.5.1",
-    "regexpu-core": "^4.2.0",
-    "slugify": "^1.3.0"
-  },
   "devDependencies": {
+    "filenamify": "^6.0.0",
+    "jsesc": "^3.0.2",
     "mkdirp": "^3.0.1",
-    "rimraf": "^6.0.1"
+    "regexpu-core": "^6.1.1",
+    "rimraf": "^6.0.1",
+    "slugify": "^1.6.6"
   }
 }
