regexp-generator: Implement downstream changes
The optimizations from commit e558b29b were never incorporated into the
upstream test generator. This does so now.

As far as I can tell, the changes to the Unicode ranges are purely
cosmetic. Some are formatted as 6-digit hex numbers instead of 4-digit.
Others move the low-surrogates range 0xDC00-0xDCFF to the beginning of the
array, but the union of the ranges is still the same.

--- a/tools/regexp-generator/package.json
+++ b/tools/regexp-generator/package.json
@@ -13,8 +13,8 @@
   "license": "MIT",
   "devDependencies": {
     "filenamify": "^6.0.0",
-    "jsesc": "^3.0.2",
     "mkdirp": "^3.0.1",
+    "regenerate": "^1.4.2",
     "regexpu-core": "^6.1.1",
     "rimraf": "^6.0.1",
     "slugify": "^1.6.6"
