regexp-generator: Include these generated tests in make.py
This is necessary so that updates to the tests without corresponding
updates to the generator script will be flagged in CI runs.

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -72,6 +72,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r tools/generation/requirements.txt
 
+      - name: Install dependencies for regexp-generator tool
+        run: |
+          cd tools/regexp-generator
+          npm install
+
       - name: Build tests
         run: |
           ./make.py clean >/dev/null
