regexp-generator: Make package private
As per the package.json docs, these are optional if the package is not
being published.

--- a/tools/regexp-generator/package.json
+++ b/tools/regexp-generator/package.json
@@ -1,7 +1,5 @@
 {
-  "name": "test262-regexp-class-escapes",
-  "version": "1.0.0",
-  "description": "",
+  "private": true,
   "main": "index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
