Remove ci_lint.sh
After the previous commit, it doesn't do much, only passes the linting
exceptions file on the command line. Instead, make the lint.exceptions
file the default for that argument (if it exists), and remove the shell
script.

--- a/.github/workflows/checks-main.yml
+++ b/.github/workflows/checks-main.yml
@@ -25,4 +25,4 @@ jobs:
         run: ./tools/lint/test/run.py
 
       - name: Lint all tests
-        run: ./tools/scripts/ci_lint.sh
+        run: ./tools/lint/lint.py test/
