Add annotations in the PR for linter errors
This should help contributors notice and fix linter errors when they
occur. Apparently it's as easy as printing a magic string to stdout, who
knew!

The lint tool doesn't give line numbers so we place the annotations at
line 1 for the time being.

--- a/.github/workflows/checks-pr.yml
+++ b/.github/workflows/checks-pr.yml
@@ -39,4 +39,10 @@ jobs:
           for file in $CHANGED; do
             echo $file
           done
-          ./tools/lint/lint.py $CHANGED
+          ./tools/lint/lint.py $CHANGED 2> >(tee errors.out >&2)
+
+      - name: Create annotations in the PR
+        if: failure()
+        run: |
+          awk -F': ' <errors.out \
+            "{ sub(\"$(pwd)/\", \"\"); printf \"::error file=%s,line=1::%s\n\", \$1, \$2 }"
