Migrate test generation workflow to GitHub Actions
This runs faster and allows for future improvements.

Similar to the linter workflow, we remove the Circle-CI-specific stuff
from the file in tools/scripts/, and into .github/workflows/.

We use another external action (tj-actions/verify-changed-files) to check
that generating the tests didn't create any new changes. This is basically
a companion action to the tj-actions/changed-files used in the linter job.

--- a/.github/workflows/checks-pr.yml
+++ b/.github/workflows/checks-pr.yml
@@ -46,3 +46,37 @@ jobs:
         run: |
           awk -F': ' <errors.out \
             "{ sub(\"$(pwd)/\", \"\"); printf \"::error file=%s,line=1::%s\n\", \$1, \$2 }"
+
+
+  build:
+    name: Build generated tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+          cache: pip
+
+      - name: Install dependencies for generation tool
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r tools/generation/requirements.txt
+
+      - name: Test the generation tool
+        run: ./tools/generation/test/run.py
+
+      - name: Build tests
+        run: ./tools/scripts/ci_build.sh
+
+      - name: Verify changes
+        uses: tj-actions/verify-changed-files@v20
+        with:
+          fail-if-changed: true
+          fail-message: |
+            New changes were found after re-generating the tests.
+            Please read the documentation on procedurally generated tests
+            https://github.com/tc39/test262/blob/HEAD/CONTRIBUTING.md#procedurally-generated-tests
