Remove ci_build.sh
After the previous commit, it doesn't do much. Just write its contents
directly in the workflow step.

--- a/.github/workflows/checks-pr.yml
+++ b/.github/workflows/checks-pr.yml
@@ -70,7 +70,9 @@ jobs:
         run: ./tools/generation/test/run.py
 
       - name: Build tests
-        run: ./tools/scripts/ci_build.sh
+        run: |
+          ./make.py clean >/dev/null
+          ./make.py
 
       - name: Verify changes
         uses: tj-actions/verify-changed-files@v20
