--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,6 +1,8 @@
 name: Checks
 
-on: push
+on:
+  - push
+  - pull_request
 
 jobs:
   lint:
@@ -22,7 +24,35 @@ jobs:
           pip install -r tools/lint/requirements.txt
 
       - name: Lint all tests
+        if: github.event_name == 'push'
         run: ./tools/lint/lint.py test/
+
+      - name: Identify new or changed tests
+        id: changed_tests
+        if: github.event_name == 'pull_request'
+        uses: tj-actions/changed-files@v45
+        with:
+          files: test/
+
+      - name: Lint new or changed tests
+        if: |
+          github.event_name == 'pull_request' &&
+            steps.changed_tests.outputs.any_changed == 'true'
+        env:
+          CHANGED: ${{ steps.changed_tests.outputs.all_changed_files }}
+        run: |
+          echo New or modified test files:
+          for file in $CHANGED; do
+            echo $file
+          done
+          ./tools/lint/lint.py $CHANGED 2> >(tee errors.out >&2)
+
+      - name: Create annotations in the PR
+        if: failure() && github.event_name == 'pull_request'
+        run: |
+          awk -F': ' <errors.out \
+            "{ sub(\"$(pwd)/\", \"\"); printf \"::error file=%s,line=1::%s\n\", \$1, \$2 }"
+
 
   build:
     name: Build generated tests
