--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r tools/lint/requirements.txt
+          npm install
 
       - name: Lint all tests
         if: github.event_name == 'push'
