--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -91,3 +91,16 @@ jobs:
             New changes were found after re-generating the tests.
             Please read the documentation on procedurally generated tests
             https://github.com/tc39/test262/blob/HEAD/CONTRIBUTING.md#procedurally-generated-tests
+
+  self-test:
+    name: Run the harness tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install test262-harness
+        run: npm install
+
+      - name: Run tests
+        run: npm run test -- test/harness/*.js
