--- a/WEB_FEATURES.yml
+++ b/WEB_FEATURES.yml
@@ -319,6 +319,10 @@ features:
     tags:
       - generators
 
+  - name: intl-relative-time-format
+    files:
+      - test/intl402/RelativeTimeFormat
+
   - name: intl-segmenter
     files:
       - test/intl402/Segmenter
